# Frontend/FarmTrackingFrontend/OpenAPIs/swagger.json
@@ -18,8 +18,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "object",
-                    "additionalProperties": false
+                    "$ref": "#/components/schemas/ActiveMachine"
                   }
                 }
               },
@@ -27,8 +26,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "object",
-                    "additionalProperties": false
+                    "$ref": "#/components/schemas/ActiveMachine"
                   }
                 }
               },
@@ -36,8 +34,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "object",
-                    "additionalProperties": false
+                    "$ref": "#/components/schemas/ActiveMachine"
                   }
                 }
               }
@@ -162,50 +159,6 @@
         },
         "additionalProperties": false
       },
-      "ActiveMachine": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "machine": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/Machine"
-              }
-            ],
-            "nullable": true
-          },
-          "field": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/Field"
-              }
-            ],
-            "nullable": true
-          },
-          "machineId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "fieldId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "timeLeft": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/TimeSpan"
-              }
-            ]
-          },
-          "active": {
-            "type": "boolean"
-          }
-        },
-        "additionalProperties": false
-      },
       "Field": {
         "required": [
           "name"
@@ -223,12 +176,7 @@
             "type": "string"
           },
           "activeMachine": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ActiveMachine"
-              }
-            ],
-            "nullable": true
+            "$ref": "#/components/schemas/ActiveMachine"
           }
         },
         "additionalProperties": false
@@ -250,19 +198,40 @@
             "type": "string"
           },
           "runTime": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/TimeSpan"
-              }
-            ]
+            "$ref": "#/components/schemas/TimeSpan"
           },
           "field": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/Field"
-              }
-            ],
-            "nullable": true
+            "$ref": "#/components/schemas/Field"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ActiveMachine": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "machine": {
+            "$ref": "#/components/schemas/Machine"
+          },
+          "field": {
+            "$ref": "#/components/schemas/Field"
+          },
+          "machineId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "fieldId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "timeLeft": {
+            "$ref": "#/components/schemas/TimeSpan"
+          },
+          "active": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
